fix the white space on the right side

--- a/style/base.css
+++ b/style/base.css
@@ -55,7 +55,7 @@
 }
 
 .menuitems {
-	width: 100%;
+	width: 50%;
     height: 200px;
 	position: absolute;
 	top: 0;
